# IntegerFactorizer

./: .gitignore  .gitmodules  Build.sh  CMakeLists.txt  LICENSE  README.md
src/: Algorithms.hpp  BasicAlgorithms.cpp  BigInt.cpp  BigInt.hpp  QuadraticSieve.cpp  main.cpp  testing.cpp
src/Semiprimes/: 10.txt  15.txt  20.txt  3.txt  30.txt  40.txt  5.txt
